# class-data-analysis-I-2025

./: .gitignore  LICENSE  README.md  pyproject.toml
assignment/: 課題1.ipynb
notebooks/: Colab_使い方.ipynb  pandas.ipynb  オブジェクト.ipynb  クラス.ipynb  チュートリアル.ipynb  データ分析演習.ipynb  データ構造.ipynb  モジュール.ipynb  ループ処理.ipynb  健康レポート.ipynb  条件分岐.ipynb  自学自習.ipynb  関数.ipynb
notebooks/assignment/: 最終課題.ipynb  課題1.ipynb  課題2.ipynb  課題3.ipynb
